tests/expected_invalid_lexer_unterminated_string.diag.out
<input>:3:9: error: unterminated string literal
            "morning
            ^^^^^^^^
